# verdictswarm-hackathon

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  railway.json  requirements.txt
api/: .env.example  DEPLOY_LOG.md  README.md  __init__.py  config.py  deps.py  main.py  railway.toml  requirements.txt
api/agents/: __init__.py  contract_reader.py  social_scanner.py  verdict_bot.py
api/middleware/: auth.py  security.py
api/models/: requests.py  responses.py  scan_events.py
api/routers/: __init__.py  admin.py  auth.py  b2a.py  metrics.py  pdf.py  scan.py  share.py  stream_scan.py  usage.py
api/services/: cache.py  event_bus.py  metrics.py  rate_limiter.py  scanner.py  solana_verdict.py
docs/: DEMO_SCRIPT.md  SOLANA_ARCHITECTURE.md
src/: __init__.py  __main__.py  burn_tracker.py  data_fetcher.py  debate_integration.py  formatters.py  free_tier.py  main.py  model_router.py  rate_limiter.py  scoring_engine.py  staking.py  test_data_fetcher.py  test_scoring_engine.py  tier_config.py  tiers.py  token_gate.py  token_whitelist.py
src/agents/: __init__.py  ai_client.py  base_agent.py  devils_advocate.py  macro_bot.py  prompts.py  scam_bot.py  security_bot.py  social_bot.py  technical_bot.py  technician_bot.py  tokenomics_bot.py
verdict-mini/: Cargo.toml
verdictswarm-onchain/: Anchor.toml
verdictswarm-onchain/programs/verdictswarm-onchain/: Cargo.toml
verdictswarm-onchain/programs/verdictswarm-onchain/src/: lib.rs
webapp/: DEPLOY_TRIGGER.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  vercel.json
(+104 files in other folders)
